remove deprecated URL constructors